@@ -4,6 +4,7 @@ ChangeLog
  * cacher:
    * PHP_5_6 support
    * fixed #333: reduce memory usage for small or empty files
+   * closes #337: adds warning about Zend OPcache optimization level incompatiblity
 
 3.1.1 2014-09-02
 ChangeLog
